<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="27dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonIncreaseTextSize"
                    style="@style/RoundedButton"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/button_increase_text_size"
                    android:text="@string/b"
                    android:textColor="#212121"
                    app:layout_constraintEnd_toStartOf="@+id/buttonDecreaseTextSize"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonDecreaseTextSize"
                    style="@style/RoundedButton"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/button_decrease_text_size"
                    android:text="@string/a"
                    android:textColor="#212121"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Campo de Carregamento de Imagem -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <!-- Imagem com gone o campo não fica visivel ate o carregamento -->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_launcher_foreground"
                    tools:ignore="ImageContrastCheck" />

                <Button
                    android:id="@+id/buttonChooseImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:backgroundTint="#FF65B269"
                    android:text="@string/inserir_foto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#3E2723"
                    android:textSize="17sp" />


            </RelativeLayout>

            <TextView
                android:id="@+id/userTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/user_types_text"
                android:textColor="#040404" />


            <RadioGroup
                android:id="@+id/radioGroupUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonCollaborator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="140dp"
                    android:text="@string/collaborator"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonAdministrator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sobrenome"
                android:inputType="text"
                android:minHeight="48dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textWebEmailAddress"
                android:minHeight="48dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:autofillHints="" />

            <!-- Campo de Seleção alterar visibilidade de acordo com o tipo de usuario-->
            <TextView
                android:id="@+id/textProfession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:text="@string/profession"
                android:textColor="#0C0C0C"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/spinnerProfession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spinnerSelectProfession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewSpecialty"
                    android:layout_marginTop="8dp"
                    tools:ignore="UnknownId" />

            </RelativeLayout>

            <TextView
                android:id="@+id/editTextBiologicalSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/selecione_o_sexo_biol_gico"
                android:textColor="#020202" />


            <RadioGroup
                android:id="@+id/radioGroupBiologicalSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="180dp"
                    android:text="@string/feminino"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/data_de_nascimento"
                android:inputType="date"
                android:minHeight="48dp" />

            <!-- Aceite da Política de Privacidade -->
            <CheckBox
                android:id="@+id/checkBoxPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/privacy_policy_text" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorEnabledButton"
                android:enabled="true"
                android:text="@string/cadastrar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#3E2723"
                android:textSize="17sp"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/linkLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:linksClickable="true"
                android:text="@string/link_login"
                android:textAlignment="center"
                android:textColor="#0B0A0A" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
